syntax="proto3";

option go_package="proto/user;laracom_service_user";

message Token {
  string token = 1;
  bool valid = 2;
  repeated Error errors = 3;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string status = 5;
  string stripe_id = 6;
  string card_brand = 7;
  string card_last_four = 8;
  string trial_ends_at = 9;
  string deleted_at = 10;
  string remember_token = 11;
  string created_at = 12;
  string updated_at = 13;
}

message Error {
  int32 code = 1;
  string description = 2;
}

message Request {}

message Response {
  User user = 1;
  repeated User users = 2;
  repeated Error errors = 3;
}

message PasswordReset {
  string email = 1;
  string token = 2;
  string create_at = 3;
}

message PasswordResetResponse {
  PasswordReset passwordReset = 1;
  repeated Error errors = 2;
}

service UserService {
  // 用户基础接口
  rpc Create(User) returns (Response) {}
  rpc Get(User) returns (Response) {}
  rpc GetAll(Request) returns (Response) {}
  rpc Update(User) returns (Response) {}

  // token 验证接口
  rpc Auth(User) returns (Token) {}
  rpc ValidateToken(Token) returns (Token) {}

  // 密码重置接口
  rpc CreatePasswordReset(PasswordReset) returns (PasswordResetResponse) {}
  rpc ValidatePasswordResetToke (Token) returns (Token) {}
  rpc DeletePasswordReset(PasswordReset) returns (PasswordResetResponse) {}
}